# -

./: .gitignore  CLAUDE.md  README.md
Fast-Drone-250-master/Fast-Drone-250-master/src/planner/plan_manage/launch/: single_run_in_exp.launch
competition_ws/: extract_map_points.py
competition_ws/src/competition_bringup/: CMakeLists.txt  package.xml
competition_ws/src/competition_bringup/config/: map.yaml
competition_ws/src/competition_bringup/include/competition_bringup/: map_utils.h
competition_ws/src/competition_bringup/launch/: competition.launch  real_flight.launch
competition_ws/src/competition_bringup/src/: map_utils.cpp
competition_ws/src/competition_gazebo/: CMakeLists.txt  package.xml
competition_ws/src/competition_gazebo/launch/: gazebo.launch
competition_ws/src/competition_gazebo/models/color_pad/: model.config  model.sdf
competition_ws/src/competition_gazebo/models/competition_arena/: model.config  model.sdf
competition_ws/src/competition_gazebo/models/gate/: model.config  model.sdf
competition_ws/src/competition_gazebo/models/obstacle_box/: model.config  model.sdf
competition_ws/src/competition_gazebo/scripts/: randomize_obstacles.py
competition_ws/src/competition_gazebo/worlds/: competition.world
competition_ws/src/gripper_node/: CMakeLists.txt  package.xml
competition_ws/src/gripper_node/src/: gripper_node.cpp
competition_ws/src/mission_node/: CMakeLists.txt  package.xml
competition_ws/src/mission_node/include/mission_node/: mission_fsm.h
competition_ws/src/mission_node/src/: mission_node.cpp
competition_ws/src/vision_node/: CMakeLists.txt  package.xml
competition_ws/src/vision_node/config/: color_params.yaml
competition_ws/src/vision_node/include/vision_node/: color_detector.h
competition_ws/src/vision_node/scripts/: calibrate_hsv.py
competition_ws/src/vision_node/src/: color_detector.cpp  vision_node.cpp
