<?xml version="1.0"?>
<package format="2">
  <name>gripper_node</name>
  <version>1.0.0</version>
  <description>抓取机构控制节点 — 电磁铁/舵机</description>
  <maintainer email="team@example.com">competition_team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
