<?xml version="1.0"?>
<package format="2">
  <name>vision_node</name>
  <version>1.0.0</version>
  <description>颜色检测与视觉定位 — HSV 阈值分割 R/G/B</description>
  <maintainer email="team@example.com">competition_team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
</package>
